// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListTile.vue should render <li> with <a> when using href prop 1`] = `

<li>
  <a href="http://www.google.com"
     class="list__tile"
  >
  </a>
</li>

`;

exports[`ListTile.vue should render <li> with <button> when using to prop 1`] = `

<li>
  <button class="list__tile">
  </button>
</li>

`;

exports[`ListTile.vue should render correctly 1`] = `

<li>
  <a href="javascript:;"
     class="list__tile"
  >
  </a>
</li>

`;
